tests/snapshots/codec_wire_frame_goldens__length_delimited_decode_empty_buffer.snap
---
source: tests/codec_wire_frame_goldens.rs
expression: "(\n            \"result\",\n            decode_label(&result),\n            \"remaining_bytes\",\n            buf.len()\n        )"
---
(
    "result",
    "None",
    "remaining_bytes",
    0,
)
