tests/snapshots/codec_wire_frame_goldens__length_delimited_encode_empty.snap
---
source: tests/codec_wire_frame_goldens.rs
expression: hexdump(&dst)
---
0000  00 00 00 00                                       |....|
(4 bytes)
