tests/snapshots/codec_wire_frame_goldens__length_delimited_encode_hello.snap
---
source: tests/codec_wire_frame_goldens.rs
expression: hexdump(&dst)
---
0000  00 00 00 05 68 65 6c 6c  6f                       |....hello|
(9 bytes)
