tests/snapshots/codec_wire_frame_goldens__length_delimited_encode_single_byte.snap
---
source: tests/codec_wire_frame_goldens.rs
expression: hexdump(&dst)
---
0000  00 00 00 01 42                                    |....B|
(5 bytes)
