tests/snapshots/codec_wire_frame_goldens__lines_decode_partial_line_no_newline.snap
---
source: tests/codec_wire_frame_goldens.rs
expression: "(\n            \"result_is_some\",\n            result.is_some(),\n            \"remaining_bytes\",\n            buf.len(),\n            \"remaining_str\",\n            std::str::from_utf8(&buf).unwrap_or(\"<invalid utf8>\").to_string()\n        )"
---
(
    "result_is_some",
    false,
    "remaining_bytes",
    7,
    "remaining_str",
    "partial",
)
