tests/snapshots/codec_wire_frame_goldens__lines_encode_empty.snap
---
source: tests/codec_wire_frame_goldens.rs
expression: hexdump(&dst)
---
0000  0a                                                |.|
(1 bytes)
