tests/snapshots/codec_wire_frame_goldens__lines_encode_single_char.snap
---
source: tests/codec_wire_frame_goldens.rs
expression: hexdump(&dst)
---
0000  78 0a                                             |x.|
(2 bytes)
